# tudostats-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.cpp  legacy.cmake  setup.cmake
cmake/: legacy.cmake  setup.cmake
include/: example.hpp
src/: CMakeLists.txt
